cluster/apps/audiobookshelf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: spuxx-dev
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.12.3
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 9003
          volumeMounts:
            - name: audiobooks
              mountPath: /audiobooks
            - name: podcasts
              mountPath: /podcasts
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
      volumes:
        - name: audiobooks
          hostPath:
            path: /home/audiobookshelf/audiobooks
        - name: podcasts
          hostPath:
            path: /home/audiobookshelf/podcasts
        - name: config
          hostPath:
            path: /home/audiobookshelf/config
        - name: metadata
          hostPath:
            path: /home/audiobookshelf/metadata
