cluster/apps/audiobookshelf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: spuxx-dev
spec:
  selector:
    app: audiobookshelf
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
